--- a/index.html
+++ b/index.html
@@ -15,11 +15,11 @@
     <ol>
         <li>
             <h3>AULA 01</h3>
-            <a href="C:\Users\mhxex\OneDrive\Documentos\GitHub\rochamatheus.github.io\aula1\primeira_pagina.html"> Tarefa 01</a>
+            <a href="aula1/primeira_pagina.html"> Tarefa 01</a>
         </li>
         <li>
             <h3>AULA 02</h3>
-            <a href="C:\Users\mhxex\OneDrive\Documentos\GitHub\rochamatheus.github.io\curso\home.html">Tarefa 02</a>
+            <a href="curso/home.html">Tarefa 02</a>
         </li>
     </ol>
 
