--- a/curso/capitulo1/exercicios/ex1.html
+++ b/curso/capitulo1/exercicios/ex1.html
@@ -12,7 +12,7 @@
     </head>
 
     <body>
-        <a href="C:\Users\mhxex\OneDrive\Documentos\Curso\sumario.html"> IR PARA SUMARIO</a>
+        <a href="rochamatheus.github.io/curso/sumario.html"> IR PARA SUMARIO</a>
         
 
     </body>
