--- a/curso/home.html
+++ b/curso/home.html
@@ -17,7 +17,7 @@
 <body>
     <h1>Bem-vindo ao curso de Desenvolvimento de Aplicações Hipermídias</h1>
 
-    <a href="C:\Users\mhxex\OneDrive\Documentos\Curso\sumario.html" hreflang="pt-br" type="text/html" charset="UTF-8" target=”_self”>
+    <a href="sumario.html" hreflang="pt-br" type="text/html" charset="UTF-8" target=”_self”>
         > Ir para Sumário </a>
 </body>
 
