--- a/curso/sumario.html
+++ b/curso/sumario.html
@@ -16,16 +16,16 @@
     <ol>
         <h3>1. Capitulo 1</h3>
         <li>
-            <a href="C:\Users\mhxex\OneDrive\Documentos\Curso\capitulo1\introducao.html"> INTRODUÇÃO</a>
+            <a href="capitulo1/introducao.html"> INTRODUÇÃO</a>
         </li>
          <li>
-             <a href="C:\Users\mhxex\OneDrive\Documentos\Curso\capitulo1\fundamentos.html"> FUNDAMENTOS.</a>
+             <a href="capitulo1/fundamentos.html"> FUNDAMENTOS.</a>
          </li>
          <li>
              <h3>EXERCICIOS</h3>
              <ol>
                  <li>
-                     <a href="C:\Users\mhxex\OneDrive\Documentos\Curso\capitulo1\exercicios\ex1.html"> EXERCICIO 01</a>
+                     <a href="capitulo1/exercicios/ex1.html"> EXERCICIO 01</a>
                  </li>
              </ol>
          </li>
@@ -35,11 +35,11 @@
         <h3>2 Capitulo 2</h3>
 
         <li> 
-            <a href="C:\Users\mhxex\OneDrive\Documentos\Curso\capitulo2\introducao.html">INTRODUÇÃO</a>
+            <a href="capitulo2/introducao.html">INTRODUÇÃO</a>
         </li>
     </ol>
     
-    <a href="C:\Users\mhxex\OneDrive\Documentos\Curso\home.html"> IR PARA PAGINA INICIAL.</a>
+    <a href="home.html"> IR PARA PAGINA INICIAL.</a>
   
 
 
