--- a/index.html
+++ b/index.html
@@ -18,8 +18,13 @@
             <a href="aula1/primeira_pagina.html"> Tarefa 01</a>
         </li>
         <li>
-            <h3>AULA 02</h3>
+            <h3>AULA 02 EXERCICIO 01</h3>
             <a href="curso/home.html">Tarefa 02</a>
+        </li>
+
+        <li>
+            <h3>AULA 02 EXERCICIO 02</h3>
+            <a href="/aula2/mapadobrasil.html">tarefa 03</a>
         </li>
     </ol>
 
