atualização exercicios aula 3

--- a/index.html
+++ b/index.html
@@ -24,7 +24,14 @@
 
         <li>
             <h3>AULA 02 EXERCICIO 02</h3>
-            <a href="/aula2/mapadobrasil.html">tarefa 03</a>
+            <a href="aula2/mapadobrasil.html">tarefa 03</a>
+        </li>
+        <li>
+            <h3>AULA 03</h3>
+            <a href="aula3/frame.html"> iframe</a>
+            <a href="aula3/obje.html">objeto</a>
+            <a href="aula3/video.html">video</a>
+            <a href="aula3/audio.html">audio</a>
         </li>
     </ol>
 
