--- a/index.html
+++ b/index.html
@@ -32,6 +32,8 @@
             <a href="aula3/obje.html">objeto</a>
             <a href="aula3/video.html">video</a>
             <a href="aula3/audio.html">audio</a>
+            <h3>Parte 2 AULA 03 </h3>
+            <a href="aula3/parte3/tabela.html">Tabela</a>
         </li>
     </ol>
 
