--- a/index.html
+++ b/index.html
@@ -35,6 +35,11 @@
             <h3>Parte 2 AULA 03 </h3>
             <a href="aula3/parte3/tabela.html">Tabela</a>
         </li>
+
+        <li>
+            <h3>AULA 04</h3>
+            <a href="aula4/artigo.html">ARTIGO</a>
+        </li>
     </ol>
 
 
