--- a/aula1/primeira_pagina.html
+++ b/aula1/primeira_pagina.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8" />
     <meta name="author" content="Matheus Silva Rocha" />
-    <meta  name="description" content="Este é o primeiro exercicio." />/ 
+    <meta  name="description" content="Este é o primeiro exercicio." />
 
 
     <title> Exercício 01 - HTML Básico e Tags Nível de Texto</title>
