--- a/index.html
+++ b/index.html
@@ -15,31 +15,59 @@
     <ol>
         <li>
             <h3>AULA 01</h3>
-            <a href="aula1/primeira_pagina.html"> Tarefa 01</a>
+            <a href="aula1/primeira_pagina.html"> TAREFA 01</a>
         </li>
         <li>
             <h3>AULA 02 EXERCICIO 01</h3>
-            <a href="curso/home.html">Tarefa 02</a>
+            <a href="curso/home.html">TAREFA 02</a>
         </li>
 
         <li>
             <h3>AULA 02 EXERCICIO 02</h3>
-            <a href="aula2/mapadobrasil.html">tarefa 03</a>
+            <a href="aula2/mapadobrasil.html">TAREFA 03</a>
         </li>
         <li>
             <h3>AULA 03</h3>
-            <a href="aula3/frame.html"> iframe</a>
-            <a href="aula3/obje.html">objeto</a>
-            <a href="aula3/video.html">video</a>
-            <a href="aula3/audio.html">audio</a>
-            <h3>Parte 2 AULA 03 </h3>
-            <a href="aula3/parte3/tabela.html">Tabela</a>
+            <a href="aula3/frame.html">IFRAME</a>
+            <a href="aula3/obje.html">OBJETO</a>
+            <a href="aula3/video.html">VIDEO</a>
+            <a href="aula3/audio.html">AUDIO</a>
+            <h3>AULA 03 - PARTE 2 </h3>
+            <a href="aula3/parte3/tabela.html">TABELA</a>
         </li>
 
         <li>
             <h3>AULA 04</h3>
             <a href="aula4/artigo.html">ARTIGO</a>
         </li>
+
+        <li>
+            <h3>AULA 05</h3>
+            <a href="aula5/formulario.html">TAREFA 01 - FORMULÁRIO</a> <br>
+            <a href="aula5/formulario2.html">TAREFA 02</a>
+
+        </li>
+
+        <li>
+            <h3>AULA 06</h3>
+            <a href="aula6/estilizacao.html">ESTILIZAÇÃO BASICA CSS</a> 
+            <br>
+            <a href="aula6/parte2.html">PARTE 2 CSS</a>
+            
+        </li>
+
+        <li>
+            <h3>AULA 07</h3>
+        <a href="aula7/index.html">MENU HORIZONTAL</a>
+        <br>
+        <a href="aula7/vertical.html">MENU VERTICAL</a>
+         </li>
+
+         <li>
+
+            <h3>AULA 08 </h3>
+            <a href="aula7.1/index.html">POSICIONAMENTO DE ELEMENTOS</a>
+         </li>
     </ol>
 
 
