projeto final atualização
Projeto P1, Meu primeiro site.

--- a/projetosite/page1.html
+++ b/projetosite/page1.html
@@ -159,7 +159,7 @@
                             <h1>Calendar</h1>
                         </div>
                         <div>
-                            <label><a href="#">Events ></a></label>
+                            <h3><a href="#">Events ></a></h3>
                         </div>
                     </div>
                     <div class="calendar-2">
